<resources>
    <string name="app_name">Banco De Alimentos</string>
    <string name="login">Iniciar sesion</string>
    <string name="home">Inicio</string>
    <string name="email">Correo</string>
    <string name="telephone">Telefono</string>
    <string name="name">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="signIn">Registrarse</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="returnAct">Regresar</string>
    <string name="menu">Menu</string>
    <string name="about">Sobre nosotros</string>
    <string name="help">¿Cómo ayudar?</string>
    <string name="donations">Donaciones</string>
    <string name="userdonations">Historial de donaciones</string>
    <string name="account">Mi cuenta</string>
    <string name="logout">Log out</string>
    <string name="askForHelp">Ser beneficiario</string>
    <string name="pickupPoints">Centros de acopio </string>
    <string name="volunteers">Voluntarios</string>
    <string name="offerVolunteers">Ofrecerse como voluntario</string>
    <string name="beVolunteer">Ser voluntario</string>
    <string name="amount">Monto a donar</string>
    <string name="donation">Donar cantidad</string>
    <string name="paymentDetails">Detalles de donación</string>
    <string name="collectionPoints">"Puntos de \n recolección"</string>
    <string name="askCollection">Solicitar recoleccion</string>
    <string name="listProductos">Productos que puedes donar: </string>
    <string name="sendData">Enviar datos</string>
    <string name="externalHelp">Para otra persona</string>
    <string name="personalHelp">Para mi</string>
    <string name="personalData">Datos de la persona solicitando</string>
    <string name="externalData">Datos de la persona que requiere nuestra ayuda</string>
    <string name="next">Siguiente</string>
    <string name="aboutus">¿Quienes somos?</string>
    <string name="mision">Mision</string>
    <string name="vision">Vision</string>
    <string name="data">Datos informativos</string>
    <string name="bankDirection">Pichón #1147. Col. Morelos.44910 Guadalajara Jalisco, México.</string>
    <string name="bankPhone">33 3810 6595</string>
    <string name="bankEmail">comunicacionbamx@bdalimentos.org</string>
    <string name="volunteerQuestion">¿Qué puedes hacer como voluntario?</string>
    <string name="formResponseTitle">¡Gracias por tu interés!</string>
    <string name="beneficiaryQuestion">¿Que significa ser beneficiario?</string>
    <string name="formResponseDescription">Pronto nos contactaremos contigo</string>
    <string name="number">7,366</string>
    <string name="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam mauris, aliquet eget libero nec, laoreet fringilla arcu. </string>

    <!--Donations item-->
    <string name="donationID">ID: </string>
    <string name="donationAmount">Cantidad: </string>
    <string name="donationDate">Fecha: </string>
    <string name="donationIDValue"> 000 </string>
    <string name="donationAmountValue"> $ 100.00</string>
    <string name="donationDateValue">DD/MM/AAAA</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lista_de_productos">Lista de productos</string>
    <string name="title_activity_map_view">MapView</string>

</resources>