<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ExternalHelpFragment">

    <TextView
        android:id="@+id/extHelpTv"
        style="@style/activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:text="@string/externalData"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/extHelpTvName"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/extHelpEtName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extHelpTv" />

    <TextView
        android:id="@+id/extHelpTvEmail"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/extHelpTvName"
        app:layout_constraintTop_toBottomOf="@+id/extHelpTvName" />

    <TextView
        android:id="@+id/extHelpTvPhone"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:text="@string/telephone"
        app:layout_constraintStart_toStartOf="@+id/extHelpTvEmail"
        app:layout_constraintTop_toBottomOf="@+id/extHelpTvEmail" />

    <EditText
        android:id="@+id/extHelpEtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/name"
        android:autofillHints="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/extHelpTvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/extHelpTvName" />

    <EditText
        android:id="@+id/extHelpEtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/email"
        android:autofillHints="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/extHelpTvEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/extHelpTvEmail" />

    <EditText
        android:id="@+id/extHelpEtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/telephone"
        android:autofillHints="@string/telephone"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/extHelpTvPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/extHelpTvPhone"/>

    <Button
        android:id="@+id/extHelpBtnNext"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#009639"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extHelpEtPhone" />


</androidx.constraintlayout.widget.ConstraintLayout>